# verity

./: CHANGELOG.md  Cargo.toml  README.md
definition/: index.html
example/: args.verity  class.verity  datatype.verity  double-linked-list.verity  family.verity  functor.verity  hello.verity  matrix.verity
lib/: list.verity  logic.verity  monad.verity  prelude.verity
workspace/verity/: Cargo.toml
workspace/verity/src/: lib.rs  main.rs
workspace/verity_definition/: Cargo.toml
workspace/verity_definition/src/: common.rs  dynamic_semantics.rs  error.rs  lib.rs  static_semantics.rs  syntax.rs
workspace/verity_dynamic_semantics/: Cargo.toml
workspace/verity_dynamic_semantics/src/: lib.rs
workspace/verity_static_semantics/: Cargo.toml
workspace/verity_static_semantics/src/: lib.rs
workspace/verity_syntax/: Cargo.toml
workspace/verity_syntax/src/: lib.rs  parser.lalrpop
